[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Visual/Enemigos/Pegote/path970.png" type="Texture" id=1]
[ext_resource path="res://Resources/Visual/Enemigos/Pegote/g968.png" type="Texture" id=2]
[ext_resource path="res://Resources/Visual/Enemigos/Pegote/g859.png" type="Texture" id=3]
[ext_resource path="res://Resources/Logic/Codes/Enemigos/Pegote.gd" type="Script" id=4]
[ext_resource path="res://Resources/Visual/Enemigos/Pegote/path978.png" type="Texture" id=5]
[ext_resource path="res://Resources/Visual/Enemigos/Pegote/path980.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.9328, 15.1575 )

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("spr_principal:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.170297, 13.4522 ), Vector2( -28.7776, 21.6257 ), Vector2( 0.510822, 2.55421 ), Vector2( -3.23537, 11.4089 ), Vector2( -3.23537, 9.02491 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eye:scale")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.803919, 0.803919 ), Vector2( 0.392357, 0.392357 ), Vector2( 0.203493, 0.203493 ), Vector2( 0.0749784, 0.0749784 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area_detect/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("spr_principal:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.4 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CollisionShape2D:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.3 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("spr_principal:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -0.340584, 11.5791 ), Vector2( 21.796, 1.02168 ), Vector2( 27.9262, 8.1735 ), Vector2( -36.4403, -0.340579 ), Vector2( -0.170297, 13.4522 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eye:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 0.277593, 0.277593 ), Vector2( 0.803919, 0.803919 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("spr_principal:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]

[node name="Pegote" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
collision/safe_margin = 10.0
script = ExtResource( 4 )

[node name="spr_principal" type="Sprite" parent="."]
self_modulate = Color( 0.721569, 0.627451, 0.686275, 1 )
z_index = 1
texture = ExtResource( 1 )

[node name="Eye" type="Sprite" parent="."]
position = Vector2( -0.170297, 13.4522 )
scale = Vector2( 0.803919, 0.803919 )
z_index = 2
texture = ExtResource( 3 )

[node name="Coca" type="Sprite" parent="."]
position = Vector2( 28.7776, 3.32048 )
rotation = 0.888473
scale = Vector2( 0.303393, 0.303393 )
texture = ExtResource( 2 )

[node name="Coca2" type="Sprite" parent="."]
position = Vector2( -42.7407, 13.878 )
rotation = -1.02805
scale = Vector2( 0.303393, 0.303393 )
texture = ExtResource( 2 )

[node name="Coca3" type="Sprite" parent="."]
position = Vector2( -35.5888, 25.4571 )
rotation = -2.32533
scale = Vector2( 0.303393, 0.303393 )
texture = ExtResource( 2 )

[node name="Coca4" type="Sprite" parent="."]
position = Vector2( 25.7125, 27.5005 )
rotation = 2.32543
scale = Vector2( 0.303393, 0.303393 )
texture = ExtResource( 2 )

[node name="Coca5" type="Sprite" parent="."]
position = Vector2( -6.64099, 30.225 )
rotation = 2.80985
scale = Vector2( 0.303393, 0.303393 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )
anims/hurt = SubResource( 3 )

[node name="tmr_move" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Area_detect" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_detect"]
scale = Vector2( 67.1549, 70.3514 )
shape = SubResource( 4 )

[node name="tmr_moveCD" type="Timer" parent="."]
process_mode = 0
one_shot = true
[connection signal="timeout" from="tmr_move" to="." method="_on_tmr_move_timeout"]
[connection signal="body_entered" from="Area_detect" to="." method="_on_Area_detect_body_entered"]
[connection signal="body_exited" from="Area_detect" to="." method="_on_Area_detect_body_exited"]
[connection signal="timeout" from="tmr_moveCD" to="." method="_on_tmr_moveCD_timeout"]
